# ativos-app

./: .dockerignore  Dockerfile  docker-compose.yml  readme.md  testeDataFrameToModel.py  web_scraping.py
backend/: .env-exemplo  __main__.py  api.py  install.sh  requirements.txt  run_api.py  run_streamlit.py  setup.cfg  setup.py
backend/config/: sheet_enum.py  sheets_configs.py
backend/data/: contas.xlsx
backend/dto/: __init__.py  venda_lucro_dto.py
backend/routes/: __init__.py  ativos_routes.py  dividendos_routes.py  vendas_routes.py
backend/service/: __init__.py  dividendos_service.py  lucro_ativos_service.py  vendas_service.py
backend/src/: __main__.py  api.py  streamlit.py
backend/src/config/: __init__.py  api_config.py  api_docs_config.py  sheet_enum.py  sheets_configs.py
backend/src/dto/: __init__.py  ativos_lucro_dto.py  dividendos_dto.py
backend/src/routes/: __init__.py  ativos_routes.py  dividendos_routes.py  vendas_routes.py
backend/src/service/: __init__.py  dividendos_service.py  lucro_ativos_service.py  vendas_service.py
docker/: .dockerignore  Dockerfile
docker/backend/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile  Dockerfile copy  nginx.conf
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts
frontend/src/assets/: env.sample.js
frontende/: README.md  package-lock.json  package.json
frontende/src/: index.html
(+99 files in other folders)
