[metadata]
name = api-ativos
version = 0.0.1
author = Carmo Junior
author_email = youremail@email.com
description = API de Ativos
url = 
keywords = api, template, boilerplate


[options]
packages = find:
python_requires = >=3.10
install_requires =  # definition of default package to be installed

[option.extra_require]
test = 
    pytest
    pytest-cov # coverage

[options.packages.find]
exclude = 
    tests*
    docs*

[options.entry_points]
console_scripts = 
    myproject = backend.__main__:main

